<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <!-- FIRST COLUMN -->
    <Button
        android:id="@+id/btn_c"
        android:text="@string/btn_c"
        style="@style/cal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_7"
        android:text="@string/btn_7"
        style="@style/cal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_c"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_4"
        style="@style/cal_btn"
        android:text="@string/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_1"
        style="@style/cal_btn"
        android:text="@string/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/btn_dot"
        style="@style/cal_btn"
        android:text="@string/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1"
        app:layout_constraintVertical_weight="1" />

    <!-- SECOND COLUMN -->
    <Button
        android:id="@+id/btn_mod"
        style="@style/cal_btn"
        android:text="@string/btn_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        android:layout_marginBottom="@dimen/cal_btn_margin"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btn_c"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_8"
        style="@style/cal_btn"
        android:text="@string/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_mod"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_5"
        style="@style/cal_btn"
        android:text="@string/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_8"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_2"
        style="@style/cal_btn"
        android:text="@string/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_5"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_0"
        style="@style/cal_btn"
        android:text="@string/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_2"
        app:layout_constraintVertical_weight="1" />
    <!-- THIRD COLUMN -->
    <Button
        android:id="@+id/btn_blank"
        style="@style/cal_btn"
        android:text="@string/btn_blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        app:layout_constraintBottom_toBottomOf="@+id/btn_c"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btn_c"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_9"
        style="@style/cal_btn"
        android:text="@string/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_blank"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_6"
        style="@style/cal_btn"
        android:text="@string/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_9"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_3"
        style="@style/cal_btn"
        android:text="@string/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_6"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_del"
        style="@style/cal_btn"
        android:text="@string/btn_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_3"
        app:layout_constraintVertical_weight="1" />

    <!-- FOURTH COLUMN -->
    <Button
        android:id="@+id/btn_plus"
        style="@style/cal_btn"
        android:text="@string/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        android:layout_marginBottom="@dimen/cal_btn_margin"
        app:layout_constraintBottom_toBottomOf="@+id/btn_9"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btn_blank"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_minus"
        style="@style/cal_btn"
        android:text="@string/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_multi"
        style="@style/cal_btn"
        android:text="@string/btn_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus"
        app:layout_constraintVertical_weight="1" />
    <Button
        android:id="@+id/btn_div"
        style="@style/cal_btn"
        android:text="@string/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_multi"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/cal_btn"
        android:text="@string/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cal_btn_margin"
        android:layout_marginLeft="@dimen/cal_btn_margin"
        android:layout_marginTop="@dimen/cal_btn_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_div"
        app:layout_constraintVertical_weight="1" />

    <!-- GUIDE LINES -->
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

</android.support.constraint.ConstraintLayout>